src/objects/StoryHistoric__b.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EstimatedHours__c</fullName>
        <label>Estimated Hours</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RealHours__c</fullName>
        <label>Real Hours</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StoryName__c</fullName>
        <label>Story Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Story Historic</label>
    <pluralLabel>Stories Historic</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>